force-app/main/default/objects/OpportunityLineItem/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Add Listing</fullName>
            </value>
            <value>
                <fullName>Cross Border</fullName>
            </value>
            <value>
                <fullName>Lower Price</fullName>
            </value>
            <value>
                <fullName>Lower Price at Competition Level</fullName>
            </value>
            <value>
                <fullName>Lower Price for Black Friday</fullName>
            </value>
            <value>
                <fullName>More Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>