force-app/main/default/objects/OpportunityLineItem/fields/Action_ETA__c.field-meta.xml
<CustomField>
    <fullName>Action_ETA__c</fullName>
    <label>Action ETA</label>
    <type>Date</type>
</CustomField>