force-app/main/default/objects/OpportunityLineItem/fields/Avg_BM_Price_30_days__c.field-meta.xml
<CustomField>
    <fullName>Avg_BM_Price_30_days__c</fullName>
    <inlineHelpText>This is the average price on the BM website for the last 30 days.</inlineHelpText>
    <label>Avg. BM Price (30 days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>