force-app/main/default/objects/OpportunityLineItem/fields/Avg_Selling_Price_7_days__c.field-meta.xml
<CustomField>
    <fullName>Avg_Selling_Price_7_days__c</fullName>
    <label>Avg. Selling Price (7 days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>