force-app/main/default/objects/OpportunityLineItem/fields/Competitor_Link__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Link__c</fullName>
    <inlineHelpText>Link to the add on the website with the lowest price.</inlineHelpText>
    <label>Competitor Link</label>
    <type>Url</type>
</CustomField>