force-app/main/default/objects/OpportunityLineItem/fields/Forecast_Units_for_Black_Friday__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Units_for_Black_Friday__c</fullName>
    <label>Forecast Units for Black Friday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>