force-app/main/default/objects/OpportunityLineItem/fields/GMV_Last_Week__c.field-meta.xml
<CustomField>
    <fullName>GMV_Last_Week__c</fullName>
    <label>GMV Last Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>