force-app/main/default/objects/OpportunityLineItem/fields/GMV_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>GMV_Opportunity__c</fullName>
    <label>GMV Opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>