force-app/main/default/objects/OpportunityLineItem/fields/Max_Price__c.field-meta.xml
<CustomField>
    <fullName>Max_Price__c</fullName>
    <inlineHelpText>This is the current price that the merchant has on the BM website.</inlineHelpText>
    <label>Max Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>