force-app/main/default/objects/OpportunityLineItem/fields/New_Price__c.field-meta.xml
<CustomField>
    <fullName>New_Price__c</fullName>
    <inlineHelpText>This is the price that merchant accepted (if different than the Sales/Target price).</inlineHelpText>
    <label>New Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>