force-app/main/default/objects/OpportunityLineItem/fields/Reason_to_Refuse__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_Refuse__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AM OOO</fullName>
            </value>
            <value>
                <fullName>BM’s commission is too high</fullName>
            </value>
            <value>
                <fullName>BM’s quality charter is too strict</fullName>
            </value>
            <value>
                <fullName>BM’s services as not attractive enough</fullName>
            </value>
            <value>
                <fullName>BuyBox lower than Target Price</fullName>
            </value>
            <value>
                <fullName>Can&apos;t meet my margin expectations at that price</fullName>
            </value>
            <value>
                <fullName>Closed for pass due date</fullName>
            </value>
            <value>
                <fullName>Couldn&apos;t reach the merchant</fullName>
            </value>
            <value>
                <fullName>Doubts on GVM potential (low ratio benefits/effort)</fullName>
            </value>
            <value>
                <fullName>I&apos;m just not selling that product</fullName>
            </value>
            <value>
                <fullName>I can&apos;t sell in this country for internal reasons</fullName>
            </value>
            <value>
                <fullName>I don’t have any stock available</fullName>
            </value>
            <value>
                <fullName>I have a high percentage of unfair returns</fullName>
            </value>
            <value>
                <fullName>I have the similar product but with different characteristics</fullName>
            </value>
            <value>
                <fullName>More expensive to handle returns on BM</fullName>
            </value>
            <value>
                <fullName>Other (add to Comment)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>