force-app/main/default/objects/OpportunityLineItem/fields/Sales_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opportunity__c</fullName>
    <inlineHelpText>This field indicated the increase of sales at the targeted price.</inlineHelpText>
    <label>Sales Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>