force-app/main/default/objects/OpportunityLineItem/fields/Sales_Volume_Last_30_days__c.field-meta.xml
<CustomField>
    <fullName>Sales_Volume_Last_30_days__c</fullName>
    <label>Sales Volume (Last 30 days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>