force-app/main/default/objects/OpportunityLineItem/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <color>#FFFF66</color>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Negotiation</fullName>
                <color>#AFCADF</color>
                <label>Negotiation</label>
            </value>
            <value>
                <fullName>Merchant OK</fullName>
                <color>#57F17C</color>
                <label>Merchant OK</label>
            </value>
            <value>
                <fullName>Merchant KO</fullName>
                <color>#FF6666</color>
                <label>Merchant KO</label>
            </value>
            <value>
                <fullName>No Action by Due Date</fullName>
                <color>#FF9966</color>
                <label>No Action by Due Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>