force-app/main/default/objects/OpportunityLineItem/validationRules/Prevent_Users_for_editing_Grade.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Users_for_editing_Grade</fullName>
    <active>true</active>
    <description>This action is only allowed for the Black Friday Opportunities.</description>
    <errorConditionFormula>AND(
NOT(CONTAINS( Opportunity.Name ,&quot;Black Friday&quot;)),
ISCHANGED(Grade__c ))</errorConditionFormula>
    <errorDisplayField>Grade__c</errorDisplayField>
    <errorMessage>You can&apos;t change the Grade for this opportunity.</errorMessage>
</ValidationRule>