force-app/main/default/objects/OpportunityLineItem/validationRules/Require_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Comment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISPICKVAL( Reason_to_Refuse__c ,&quot;Other (add to Comment)&quot;),
ISPICKVAL( Reason_to_Refuse__c ,&quot;I can&apos;t sell in this country for internal reasons&quot;)),
ISBLANK( Comment__c ))</errorConditionFormula>
    <errorDisplayField>Comment__c</errorDisplayField>
    <errorMessage>Please explain the reason to refuse in the Comment (and add ETA - if applicable).</errorMessage>
</ValidationRule>