force-app/main/default/objects/OpportunityLineItem/validationRules/Require_Reason_to_Refuse.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Reason_to_Refuse</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISPICKVAL(Stage__c,&quot;Merchant KO&quot;),ISPICKVAL(Stage__c,&quot;No Action by Due Date&quot;)),
ISBLANK(TEXT( Reason_to_Refuse__c )))</errorConditionFormula>
    <errorDisplayField>Reason_to_Refuse__c</errorDisplayField>
    <errorMessage>Please add the reason to refuse the Opportunity.</errorMessage>
</ValidationRule>